--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div id="container">
       <div id="profile">
         <img
-          src="https://github.com/bolazildo.png"
-          alt="Foto do Bola usando camiseta branca, barba e fundo roxo."
+          src="./assets/foto_perfil-removebg-preview.png"
+          alt="Foto do Bola usando camiseta branca, barba e fundo cinza."
         />
         <p>@bolazildo</p>
       </div>
@@ -44,13 +44,13 @@
           >
         </li>
         <li>
-          <a href="https://github.com/bolazildo" target="_blank"
+          <a href="https://github.com/rafaelfrazatto" target="_blank"
             >Veja meu portfólio (GitHub)</a
           >
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/bolazildo" target="_blank">
+        <a href="https://github.com/rafaelfrazatto" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
         <a href="https://instagram.com/bolazildo" target="_blank">
@@ -59,10 +59,7 @@
         <a href="https://youtube.com/bolazildo" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon
         ></a>
-        <a
-          href="https://www.linkedin.com/in/rafael-frazatto-6b05b57b/"
-          target="_blank"
-        >
+        <a href="https://www.linkedin.com/in/rafaelfrazatto/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon
         ></a>
       </div>
